; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nilfs2/extr_mdt.c_nilfs_mdt_new.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nilfs2/extr_mdt.c_nilfs_mdt_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { %struct.TYPE_2__*, i32*, i32* }
%struct.TYPE_2__ = type { i32* }
%struct.the_nilfs = type { i32 }
%struct.super_block = type { i32 }

@NILFS_MDT_GFP = common dso_local global i32 0, align 4
@def_mdt_iops = common dso_local global i32 0, align 4
@def_mdt_fops = common dso_local global i32 0, align 4
@def_mdt_aops = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.inode* @nilfs_mdt_new(%struct.the_nilfs* %0, %struct.super_block* %1, i32 %2) #0 {
  %4 = alloca %struct.inode*, align 8
  %5 = alloca %struct.the_nilfs*, align 8
  %6 = alloca %struct.super_block*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.inode*, align 8
  store %struct.the_nilfs* %0, %struct.the_nilfs** %5, align 8
  store %struct.super_block* %1, %struct.super_block** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load %struct.the_nilfs*, %struct.the_nilfs** %5, align 8
  %10 = load %struct.super_block*, %struct.super_block** %6, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* @NILFS_MDT_GFP, align 4
  %13 = call %struct.inode* @nilfs_mdt_new_common(%struct.the_nilfs* %9, %struct.super_block* %10, i32 %11, i32 %12)
  store %struct.inode* %13, %struct.inode** %8, align 8
  %14 = load %struct.inode*, %struct.inode** %8, align 8
  %15 = icmp ne %struct.inode* %14, null
  br i1 %15, label %17, label %16

16:                                               ; preds = %3
  store %struct.inode* null, %struct.inode** %4, align 8
  br label %27

17:                                               ; preds = %3
  %18 = load %struct.inode*, %struct.inode** %8, align 8
  %19 = getelementptr inbounds %struct.inode, %struct.inode* %18, i32 0, i32 2
  store i32* @def_mdt_iops, i32** %19, align 8
  %20 = load %struct.inode*, %struct.inode** %8, align 8
  %21 = getelementptr inbounds %struct.inode, %struct.inode* %20, i32 0, i32 1
  store i32* @def_mdt_fops, i32** %21, align 8
  %22 = load %struct.inode*, %struct.inode** %8, align 8
  %23 = getelementptr inbounds %struct.inode, %struct.inode* %22, i32 0, i32 0
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  store i32* @def_mdt_aops, i32** %25, align 8
  %26 = load %struct.inode*, %struct.inode** %8, align 8
  store %struct.inode* %26, %struct.inode** %4, align 8
  br label %27

27:                                               ; preds = %17, %16
  %28 = load %struct.inode*, %struct.inode** %4, align 8
  ret %struct.inode* %28
}

declare dso_local %struct.inode* @nilfs_mdt_new_common(%struct.the_nilfs*, %struct.super_block*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
